setup + wager implementation

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,13 @@
 	"root": true,
 	"extends": [
 		"xo/esnext",
-		"plugin:ava/recommended"
+		"plugin:ava/recommended",
+		"prettier"
 	],
 	"plugins": [
-		"ava"
+		"ava",
+		"html",
+		"prettier"
 	],
 	"rules": {
 		"new-cap": [
@@ -20,6 +23,19 @@
 					"window.dashboardApi.Replicant"
 				]
 			}
+		],
+		"prettier/prettier": [
+			2,
+			{
+				"singleQuote": true,
+				"semi": false
+			}
 		]
+	},
+	"env": {
+		"browser": true
+	},
+	"globals": {
+		"nodecg": "readonly"
 	}
 }
