--- a/package.json
+++ b/package.json
@@ -164,18 +164,24 @@
     "browserify": "^16.2.3",
     "del": "^4.1.0",
     "eslint": "^6.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-plugin-ava": "^7.1.0",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-prettier": "^3.4.0",
     "exorcist": "^2.0.0",
     "fs-extra": "^7.0.1",
+    "generator-nodecg": "^1.2.0",
     "gulp": "^4.0.0",
     "gulp-util": "^3.0.8",
     "husky": "4",
     "is-windows": "^1.0.2",
     "jsdoc": "^3.6.2",
     "minami": "github:nodecg/minami#75b4bbfc7e9d834f840be2358f4ddedf738cbfa8",
+    "nodecg-cli": "^7.0.0",
     "nyc": "^14.1.1",
     "p-retry": "^4.1.0",
+    "prettier": "2.3.0",
     "puppeteer": "^8.0.0",
     "remark": "^10.0.1",
     "remark-toc": "^5.1.1",
@@ -189,7 +195,8 @@
     "temp": "^0.9.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "vinyl-transform": "^1.0.0"
+    "vinyl-transform": "^1.0.0",
+    "yo": "^4.2.0"
   },
   "browserslist": [
     "last 2 chrome versions",
