--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "winston": "^3.3.3"
   },
   "scripts": {
+    "lint": "eslint bundles --ext .html",
     "start": "node index.js",
     "test": "npm run build && npm run instrument && nyc --reporter=none ava --config ava.config.js && nyc report --reporter=html --reporter=text && npm run typetest",
     "static": "eslint index.js lib src test",
@@ -154,6 +155,8 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.3",
+    "@html-eslint/eslint-plugin": "^0.10.1",
+    "@html-eslint/parser": "^0.10.1",
     "aliasify": "^2.1.0",
     "ava": "^2.2.0",
     "axios": "^0.21.1",
@@ -163,7 +166,7 @@
     "brfs": "^2.0.2",
     "browserify": "^16.2.3",
     "del": "^4.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-plugin-ava": "^7.1.0",
